@@ -1,4 +1,6 @@
 ver 0.20.16 (not yet released)
+* database
+  - simple: fix search within mount points
 * fix crash in debug build on Haiku and other operating systems
 
 ver 0.20.15 (2018/01/05)
